--- a/docker-compose/kafka-docker-compose/docker-compose.yml
+++ b/docker-compose/kafka-docker-compose/docker-compose.yml
@@ -17,9 +17,12 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: localhost:32181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     extra_hosts:
       - "moby:127.0.0.1"
+    ports: 
+      - 9092:9082
+      
       
   
