--- a/docker-compose/hbase-docker-compose/docker-compose.yml
+++ b/docker-compose/hbase-docker-compose/docker-compose.yml
@@ -63,6 +63,7 @@ services:
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=0.0.0.0:2888:3888
+      SERVICE_PRECONDITION: "hbase-master:9000 datanode:50075"
     ports:
       - 2181:2181
 
@@ -76,6 +77,7 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 zoo:2181"
     ports:
       - 16010:16010
+      - 9000:9000
 
   hbase-region:
     image: bde2020/hbase-regionserver:1.0.0-hbase1.2.6
