Ajuste docker compose

--- a/docker-compose/kafka-docker-compose/docker-compose.yml
+++ b/docker-compose/kafka-docker-compose/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     extra_hosts:
       - "moby:127.0.0.1"
+    ports: 
+      - 32181:32181
 
   kafka:
     image: confluentinc/cp-kafka:latest
